--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&&family=Ubuntu:wght@300&family=Montserrat:wght@300&family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <!-- fontawesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&&family=Ubuntu:wght@300&family=Montserrat:wght@300&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
   <!-- bootscrapscript -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -25,29 +26,26 @@
   <section class="colored-section" id="title">
     <div class="container-fluid">
 
-
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand href="">tindog</a>
+        <a class="navbar-brand" href="">tindog</a>
         <button class=" navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#footer">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pricing">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#cta">Download</a>
-              </li>
-            </ul>
-          </div>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#footer">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cta">Download</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-
-
 
       <!-- Title -->
       <div class="row">
@@ -57,17 +55,14 @@
           <!--using fontawesome -->
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
         </div>
-        <div>
-          <div class="col-lg-6">
-            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
-          </div>
+        <div class="col-lg-6">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
+    </div>
   </section>
 
-  </div>
   <!-- Features -->
-
   <section class="white-section" id="features">
     <div class="container-fluid">
       <div class="row">
@@ -90,9 +85,7 @@
     </div>
   </section>
 
-
   <!-- Testimonials -->
-
   <section class="colored-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
@@ -118,9 +111,7 @@
 
   </section>
 
-
   <!-- Press -->
-
   <section class="colored-section" id="press">
     <img class="presslogo" src="images/techcrunch.png" alt="tc-logo">
     <img class="presslogo" src="images/tnw.png" alt="tnw-logo">
@@ -129,9 +120,7 @@
 
   </section>
 
-
   <!-- Pricing -->
-
   <section class="white-section" id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
@@ -187,9 +176,7 @@
     </div>
   </section>
 
-
   <!-- Call to Action -->
-
   <section class="colored-section" id="cta">
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
@@ -198,18 +185,17 @@
     </div>
   </section>
 
-
   <!-- Footer -->
-  <div class="container-fluid ">
-    <footer class="white-section" id="footer">
+  <footer class="white-section" id="footer">
+    <div class="container-fluid ">
+
       <i class="foot fab fa-twitter"></i>
       <i class="foot fab fa-facebook-f"></i>
       <i class="foot fab fa-instagram"></i>
       <i class="foot fas fa-envelope"></i>
-      <p>© Copyright 2020 TinDog</p>
-
-    </footer>
-  </div>
+      <p>© Copyright 2020 Hritwick</p>
+    </div>
+  </footer>
 
 </body>
 
